packages/jsii/test/negatives/neg.internal-underscore-class.7.ts
export class MyClass {
  /** @internal */
  public methodWithInternalButNoUnderscore(): string {
    return 'hi';
  }
}
